--- a/client/src/components/buttons/Buttons.module.scss
+++ b/client/src/components/buttons/Buttons.module.scss
@@ -1,4 +1,8 @@
 .main{
+  margin: 20px 0 0 0;
+  background-color: #FFFFFF;
+  padding: 20px;
+// КНОПКИ НАЗАД-ВПЕРЕД
   .title_left_right{
     display: flex;
     justify-content: space-between;
@@ -25,5 +29,216 @@
       justify-content: center;
       align-items: center;
     }
+  }
+// МЕНЮ (РАЗДЕЛЫ В ОТКРЫТОМ ОКНЕ)
+  .points_block{
+    width: 100%;
+    height: 34px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-top: 10px;
+    .points_block_line{
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      .points_block_line_point{
+        height: 100%;
+        padding: 0 15px;
+        margin-right: 7px;
+        color: #1C55AE;
+        text-decoration: #1C55AE underline dashed;
+        text-underline-offset: 5px;
+        text-decoration-thickness: 1px;
+        border-radius: 4px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 13px;
+        cursor: pointer;
+      }
+      .points_block_backcolor_grey{
+        background-color: #F2F2F2;
+        text-decoration: none;
+        color: #454545;
+      }
+    }
+  }
+// БЛОК "ОТБОРЫ"
+  .block_filters{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    margin-top: 20px;
+    .block_filters_open{
+      display: flex;
+      justify-content: flex-start;
+      align-items: center;
+      color: #009646;
+
+      .block_filters_open_arrow{
+        margin-right: 15px;
+        margin-left: 2px;
+      }
+      .block_filters_open_name{
+        font-size: 16px;
+      }
+    }
+    .block_filters_positions{
+      width: 100%;
+      margin-top: 7px;
+      border-left: 2px solid #009646;
+      padding-left: 14px;
+      display: flex;
+      .block_filters_positions_list{
+        display: flex;
+        flex-direction: column;
+        width: 600px;
+        margin-right: 30px;
+        .block_filters_positions_line{
+          display: flex;
+          justify-content: space-between;
+          align-items: center;
+          font-size: 13px;
+          margin: 7px 0 3px 0;
+          .block_f_p_line_left{
+            display: flex;
+            align-items: center;
+
+            .block_f_p_line_left_name{
+              margin-left: 10px;
+            }
+          }
+          .block_f_p_line_right{
+            display: flex;
+            align-items: center;
+            // Строковый подбор
+            .block_f_p_line_right_choice{
+              display: flex;
+              align-items: center;
+              justify-content: flex-end;
+              border: 1px solid #A0A0A0;
+              border-radius: 3px;
+              height: 25px;
+              width: 408px;
+              .block_f_p_line_right_choice_input{
+                border: none;
+                outline: none;
+                width: calc(100% - 20px);
+                padding: 0 10px;
+              }
+              div{
+                display: flex;
+                justify-content: center;
+                align-items: center;
+              }
+              .block_f_p_line_right_choice_more{
+                border-left: 1px solid #A0A0A0;
+                padding: 0 6px;
+                height: 25px;
+              }
+              .block_f_p_line_right_choice_close{
+                border-left: 1px solid #A0A0A0;
+                padding: 0 6px;
+                height: 25px;
+                font-size: 10px;
+              }
+            }
+
+            // ДАТА С и ПО
+            .block_f_p_line_right_dateinto{
+              display: flex;
+              align-items: center;
+              justify-content: flex-start;
+
+              height: 25px;
+              width: 408px;
+              .block_f_p_line_right_dateinto_input{
+                width: 100px;
+                height: 25px;
+                border: 1px solid #A0A0A0;
+                outline: none;
+                border-radius: 3px;
+                padding: 0px 3px;
+                margin-left: -2px;
+                margin-right: 10px;
+              }
+              .block_f_p_line_right_dateinto_slash{
+
+                margin-right: 10px;
+              }
+            }
+
+            }
+        }
+      }
+    }
+
+
+
+
+  }
+// КНОПКА БОЛЕЕ (MORE)
+  .btn_more{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 29px;
+    height: 25px;
+    border: 1px solid #989898;
+    border-radius: 3px;
+    box-shadow: 0px 1px 0px rgba(183, 183, 183, 0.5);
+    cursor: pointer;
+  }
+  // CHECKBOX
+  .checkbox_box{
+    width: 14px;
+    height: 14px;
+    border: 1px solid #A0A0A0;
+    border-radius: 2px;
+  }
+  //БЛОК ФУНКЦИОНАЛЬНЫЕ КНОПКИ
+  .function_bnts{
+    width: 100%;
+    margin: 10px 0;
+    .function_bnts_line_btns{
+      width: 100%;
+      display: flex;
+      justify-content: flex-start;
+      align-items: flex-start;
+      .funbtn{
+        height: 24px;
+        padding: 0 14px;
+        border: 1px solid #9B9B9B;
+        border-radius: 3px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 12px;
+        color: #454545;
+        box-shadow: 0px 1px 0px rgba(183, 183, 183, 0.5);
+        cursor: pointer;
+        background-image: linear-gradient(to bottom, #FEFEFE, #EDEDED);
+        margin-right: 10px;
+      }
+      .fun_b_l_b_make{
+        background-image: linear-gradient(to bottom, #FFE83C, #ECD000);
+      }
+      .fun_b_l_b_standart{}
+      .fun_b_l_b_list{
+        p{
+          margin-left: 5px;
+        }
+      }
+      .fun_b_l_b_img{
+        width: 24px;
+        padding: 0;
+      }
+    }
+
   }
 }
