--- a/client/src/components/projects/Projects.module.scss
+++ b/client/src/components/projects/Projects.module.scss
@@ -9,29 +9,31 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    width: 310px;
-    min-height: 200px;
+    width: 290px;
+    min-height: 100px;
     margin: 20px 20px 0 0;
     cursor: pointer;
-    .window{
-      width: 300px;
-      height: 180px;
-      border: 5px solid #FFCAFE;
-      border-radius: 15px;
-      background-color: #FFFFFF;
-      transition: .2s;
-    }
+    border: 1px solid #CCC;
+    padding: 0 10px;
+    transition: 0.2s;
     .name{
       text-align: center;
       margin-top: 5px;
+      color: #454545;
+      transition: 0.2s;
     }
-
     &:hover{
 
-      .window{
-        box-shadow: 2px 2px 30px rgba(0,0,0,0.3);
-        transition: .2s;
+        border: 1px solid #410099;
+        transition: 0.2s;
+
+      .name{
+        color: #410099;
+        transition: 0.2s;
       }
     }
   }
+
+
+
 }
