--- a/client/src/components/chat/Bear.module.scss
+++ b/client/src/components/chat/Bear.module.scss
@@ -9,4 +9,21 @@
   bottom: 20px;
   right: 90px;
   z-index: 99;
+
+  .btn{
+    position: relative;
+    bottom: -80px;
+    right: 50px;
+    width: 50px;
+    height: 50px;
+    background-color: #E1E1E1;
+    border: 1px solid #CCC;
+    font-size: 10px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 25px;
+    text-align: center;
+    cursor: pointer;
+  }
 }
